--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    {% include 'header.html' %}
+    {% include 'components/header.html' %}
     <div class="content">
         <form action="" method="post">
             <label for="username">Handle: </label>
@@ -26,6 +26,7 @@
             <input type="submit" value="Register" class="button">
         </form>
     </div>
+    {% include 'components/footer.html' %}
 </body>
 
 </html>
