--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-    {% include 'header.html' %}
+    {% include 'components/header.html' %}
     <div class="content">
         <div class="user">
-            {% include 'user-detail.html' %}
+            {% include 'components/user-detail.html' %}
             <p>{{ user.bio }}</p>
             <p>Subscribers: {{ user.get_subscribers()|length }}</p>
             {% if me %}
@@ -18,12 +18,12 @@
             {% else %}
             {% if not me.check_subscription(user.user_id) %}
             <form action="/subscribe/{{ user.handle }}" method="post">
-                {% include 'csrf_token.html' %}
+                {% include 'components/csrf_token.html' %}
                 <input type="submit" value="Subscribe" class="button">
             </form>
             {% else %}
             <form action="/unsubscribe/{{ user.handle }}" method="post">
-                {% include 'csrf_token.html' %}
+                {% include 'components/csrf_token.html' %}
                 <input type="submit" value="Unsubscribe" class="button">
             </form>
             {% endif %}
@@ -34,10 +34,11 @@
 
         <div class="video-list">
             {% for video in videos %}
-            {% include 'video.html' %}
+            {% include 'components/video.html' %}
             {% endfor %}
         </div>
     </div>
+    {% include 'components/footer.html' %}
 </body>
 
 </html>
