--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,16 +6,15 @@
 </head>
 
 <body>
-    {% include 'header.html' %}
-
-
+    {% include 'components/header.html' %}
     <div class="content">
         <div class="video-list">
             {% for video in videos %}
-            {% include 'video.html' %}
+            {% include 'components/video.html' %}
             {% endfor %}
         </div>
     </div>
+    {% include 'components/footer.html' %}
 </body>
 
 </html>
