--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    {% include 'header.html' %}
+    {% include 'components/header.html' %}
     <div class="content">
         <form action="" method="post">
             <label for="username">Handle: </label>
@@ -17,6 +17,7 @@
         </form>
         <p>No account yet? <a href="/register">Register here</a></p>
     </div>
+    {% include 'components/footer.html' %}
 </body>
 
 </html>
