--- a/src/templates/user_edit.html
+++ b/src/templates/user_edit.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    {% include 'header.html' %}
+    {% include 'components/header.html' %}
     <div class="content">
         <h1>Edit user info for @{{ me.handle }}</h1>
         <form action="/user/edit" method="post" enctype="multipart/form-data">
-            {% include 'csrf_token.html' %}
+            {% include 'components/csrf_token.html' %}
             <label for="nickname">Update nickname: </label>
             <input type="text" name="nickname" id="nickname" value="{{ me.nickname }}" placeholder="{{ me.nickname }}"
                 minlength="{{ config.NICKNAME_MIN_LENGTH }}" maxlength="{{ config.NICKNAME_MAX_LENGTH }}"></br></br>
@@ -25,12 +25,13 @@
         <p>No avatar set.</p>
         {% endif %}
         <form action="/image" method="post" enctype="multipart/form-data">
-            {% include 'csrf_token.html' %}
+            {% include 'components/csrf_token.html' %}
             <label for="avatar">Upload new avatar: </label>
             <input type="file" name="avatar" id="avatar" accept="image/png, image/jpeg"></br>
             <input type="submit" value="Upload" class="button">
         </form>
     </div>
+    {% include 'components/footer.html' %}
 </body>
 
 </html>
