--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -253,6 +253,71 @@ img {
     font-style: italic;
 }
 
-label[for="username"]::after {
-    content: '@'
+form.form {
+    max-width: 30em;
+    min-width: 20rem;
+}
+
+form.form.small {
+    max-width: 20rem;
+    min-width: 10rem;
+}
+
+form.form.small .field {
+    grid-template-columns: minmax(30%, 4em) auto;
+}
+
+form.form .field {
+    display: grid;
+    grid-template-columns: minmax(30%, 10em) auto;
+    grid-gap: 0.5em;
+}
+
+form.form .field.size-1 {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto;
+}
+
+form.form .field .font-big {
+    font-size: 1.5rem;
+}
+
+form.form input[type="text"],
+input[type="password"],
+form.form textarea {
+    width: 100%;
+}
+
+form.form textarea {
+    height: 5em;
+}
+
+form.form .field input,
+form.form .field textarea {
+    font-size: 1rem;
+    font-family: sans-serif;
+    resize: none;
+}
+
+form.form .field label {
+    margin: auto;
+}
+
+form.form .field input[type="submit"] {
+    margin: auto;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+form.form .field #video-description {
+    margin: auto;
+}
+
+form.form .button {
+    margin: 1rem;
+}
+
+.form.comment-form input[type="submit"] {
+    margin: 0;
 }
