--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -8,12 +8,18 @@
 <body>
     {% include 'components/header.html' %}
     <div class="content">
-        <form action="" method="post">
-            <label for="username">Handle: </label>
-            <input type="text" name="username" id="username"></br>
-            <label for="password">Password: </label>
-            <input type="password" name="password" id="password"></br>
-            <input type="submit" value="Login" class="button">
+        <form action="" method="post" class="form small">
+            <div class="field">
+                <label for="username">Handle: </label>
+                <input type="text" name="username" id="username"></br>
+            </div>
+            <div class="field">
+                <label for="password">Password: </label>
+                <input type="password" name="password" id="password"></br>
+            </div>
+            <div class="field size-1">
+                <input type="submit" value="Login" class="button">
+            </div>
         </form>
         <p>No account yet? <a href="/register">Register here</a></p>
     </div>
