--- a/src/templates/error.html
+++ b/src/templates/error.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    {% include 'header.html' %}
+    {% include 'components/header.html' %}
     <div class="content">
         <h1>Uh oh!</h1>
         <p>{{ error }}</p>
