--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -8,6 +8,7 @@
 <body>
     {% include 'components/header.html' %}
     <div class="content">
+        {% include 'components/error.html' %}
         <form action="" method="post" class="form">
 
             <div class="field">
