--- a/src/templates/error.html
+++ b/src/templates/error.html
@@ -1,17 +1,16 @@
 <html>
 
 <head>
-    <title>Error!</title>
+    <title>FilmFlask</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
 </head>
 
 <body>
     {% include 'components/header.html' %}
     <div class="content">
-        <h1>Uh oh!</h1>
-        <p>{{ error }}</p>
-        <a href="/">Back to front-page</a>
+        {% include 'components/error.html' %}
     </div>
+    {% include 'components/footer.html' %}
 </body>
 
 </html>
