--- a/src/templates/upload.html
+++ b/src/templates/upload.html
@@ -8,6 +8,7 @@
 <body>
     {% include 'components/header.html' %}
     <div class="content">
+        {% include 'components/error.html' %}
         <h1>Upload video</h1>
         <form action="/upload" method="post" enctype="multipart/form-data" class="form">
             {% include 'components/csrf_token.html' %}
