--- a/src/templates/watch.html
+++ b/src/templates/watch.html
@@ -20,7 +20,7 @@
 <body>
     {% include 'components/header.html' %}
     <div class="content">
-        <video autoplay="true" src="/video/{{ video.video_id }}" controls=true height="480"></video>
+        <video autoplay="true" src="/video/{{ video.video_id }}" controls=true></video>
         <h1>{{ video.title }}</h1>
         <div class="video-details">
             <div>
